apps/subsystems/downloaders/overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: overseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: overseerr
        command:
        - /scripts/entrypoint.sh
        image: ghcr.io/sct/overseerr:1.35.0@sha256:6197516c9d7b58ccf113455e32aafb94df5d91995fe50e8c2cae6ba6c7c7b7de
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 5055
        ports:
        - name: overseerr
          containerPort: 5055
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 5055
        resources:
          requests:
            cpu: 15m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /app/config
          name: overseerr-data
        - mountPath: /settings.json.preconfigured
          name: downloader-config
          readOnly: true
          subPath: overseerr.json
        - mountPath: /scripts
          name: overseerr-scripts
        - mountPath: /app/config/logs
          name: overseerr-logs
        - mountPath: /tmp
          name: overseerr-temp
      securityContext:
        runAsNonRoot: true
        runAsUser: 11111
        runAsGroup: 11111
        fsGroup: 11111
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: overseerr-data
        persistentVolumeClaim:
          claimName: overseerr-data
      - name: downloader-config
        secret:
          secretName: downloader-config
          optional: true
      - name: overseerr-scripts
        configMap:
          name: overseerr-scripts
          defaultMode: 0755
      - name: overseerr-logs
        emptyDir: {}
      - name: overseerr-temp
        emptyDir: {}
