apps/subsystems/downloaders/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: overseerr
spec:
  selector:
    app.kubernetes.io/name: overseerr
  ports:
  - name: overseerr
    port: 5055
    targetPort: overseerr
    protocol: TCP
  type: ClusterIP
